fp-macros/tests/ui/missing_type_keyword.stderr
error: expected `type`
  --> tests/ui/missing_type_keyword.rs:12:3
   |
12 |         Of<A> = Option<A>;
   |         ^^
